# zero2prod

./: Cargo.toml  README.md  configuration.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  main.yml
scripts/: init_db.sh
src/: main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
