[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.183", features = ["derive"] }
config = "0.13.3"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "uuid",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.18"
